<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/edit" />
    <item
        android:id="@+id/action_diploma"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/diploma_uitgeven" />

    <item
        android:id="@+id/action_verbergen"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/verbergen" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/delete" />

</menu>