<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cwoapp.nl.cwoapp.CursistFormFragment">

    <EditText
        android:id="@+id/editTextVoornaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/voornaam"
        android:inputType="textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTussenvoegsel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/tussenvoegsel"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextVoornaam"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/editTextAchternaam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-6dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/achternaam"
        android:inputType="textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTussenvoegsel"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/editTextOpmerkingen"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/opmerkingen"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaspoort" />

    <TextView
        android:id="@+id/textViewPaspoort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/paspoort"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAchternaam" />

    <CheckBox
        android:id="@+id/checkBoxPaspoort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="29dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextAchternaam"
        app:layout_constraintLeft_toRightOf="@+id/textViewPaspoort"
        android:layout_marginLeft="18dp" />


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/opslaan"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOpmerkingen"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitEnd"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_user_image"
        app:layout_constraintLeft_toRightOf="@+id/editTextTussenvoegsel"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonPhoto"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:onClick="dispatchTakePictureIntent"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFoto"
        app:layout_constraintRight_toRightOf="@+id/imageViewFoto"
        app:srcCompat="@android:drawable/ic_menu_edit"
        tools:layout_editor_absoluteX="330dp"
        tools:layout_editor_absoluteY="115dp" />

</android.support.constraint.ConstraintLayout>
